--- a/t/vue/hello-vue/package.json
+++ b/t/vue/hello-vue/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "es6-promise": "^4.2.5",
     "vue": "^2.5.17",
+    "vue-lodash": "^2.0.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
